@@ -1,5 +1,11 @@
 2008-01-30  Jonathon Jongsma  <jjongsma@gnome.org>
 
+	* configure.in: bump cairo requirement to 1.5.8
+	* cairomm/context.cc:
+	* cairomm/context.h: add get_path_extents function, new in 1.5.8
+
+2008-01-30  Jonathon Jongsma  <jjongsma@gnome.org>
+
 	* configure.in: enable people with CAIROMM_DEVEL variable set to explicitly
 	deisable automated tests
 	* m4/ax_boost_unit_test_framework.m4: update to slightly newer boost
